@@ -33,6 +33,7 @@
     and icon/list modes.
 19. Add a workaround for dockmanager issues - delay registration for .25secs.
 20. Change default settings; use tree style for library, playlists, and streams.
+21. Better playback button sizes.
 
 0.4.0
 -----
